<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">R2D2</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="sensors">Sensors</string>
    <string name="sensors_loading">Loading sensors ...</string>
    <string name="title_activity_sensor">SensorActivity</string>
    <string name="sensor">Sensor</string>
    <string name="current_reading">Current reading</string>
    <string name="no_sensor">No such sensor</string>
    <string name="power">Power</string>
    <string name="vendor">Vendor</string>
    <string name="resolution">Resolution</string>
    <string name="waiting_data">Waiting for data ...</string>

</resources>
