<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.feldspaten.R2D2.SensorActivity" >

    <TextView
        android:id="@+id/tvSensor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sensor"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvCurrentReading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_reading"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvSensorPower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/power"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/tvSensorVendor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vendor"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/tvSensorResolution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resolution"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</LinearLayout>
